apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: mariadb
          image: docker.io/library/mariadb:11.8.9@sha256:6422478cb8e159f080fb1d8ccf65101e26fe51385787fde7d16c3b165a331f15
          args:
            - --transaction-isolation=READ-COMMITTED
            - --log-bin=binlog
            - --binlog-format=ROW
            - --binlog-expire-logs-seconds=1209600 # 14d
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
        - name: redis
          image: docker.io/library/redis:alpine@sha256:3811787313eba226a2ef38658c6ccb91cd5e110edc89c37767de373120a0e5a0
          args:
            - --appendonly
            - "yes"
            - --appendfsync
            - everysec
            - --maxmemory
            - 512mb
            - --maxmemory-policy
            - allkeys-lru
          volumeMounts:
            - name: redis-data
              mountPath: /data
        - name: nextcloud
          image: docker.io/library/nextcloud:35.0.1@sha256:b1ae671e9815401b0e837b19b9c778e89887721d67f0c8f9d34aa1d27a9a208f
          ports:
            - containerPort: 80
          readinessProbe:
            # check if in maintenance mode (in case of failed upgrade)
            exec:
              command:
                - php
                - -r
                - '$c = include "/var/www/html/config/config.php"; exit(empty($c["maintenance"]) ? 0 : 1);'
            periodSeconds: 15
            failureThreshold: 3
          volumeMounts:
            - name: nextcloud-config
              mountPath: /var/www/html
            - name: media
              mountPath: /media
            - name: php-overrides
              mountPath: /usr/local/etc/php/conf.d/zz-session-override.ini
              subPath: zz-session-override.ini
              readOnly: true
        - name: cron
          image: docker.io/library/nextcloud:35.0.1@sha256:b1ae671e9815401b0e837b19b9c778e89887721d67f0c8f9d34aa1d27a9a208f
          command: ["/cron.sh"]
          volumeMounts:
            - name: nextcloud-config
              mountPath: /var/www/html
        - name: db-dump
          # dump at 02:30 (before the 03:00 backup)
          # gzip dumps under /data/crypt/nextcloud/dumps
          image: docker.io/library/mariadb:11.8.9@sha256:6422478cb8e159f080fb1d8ccf65101e26fe51385787fde7d16c3b165a331f15
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          volumeMounts:
            - name: dumps
              mountPath: /dumps
      volumes:
        - name: mariadb-data
          hostPath:
            path: /data/crypt/nextcloud/mariadb
            type: DirectoryOrCreate
        - name: redis-data
          hostPath:
            path: /data/crypt/nextcloud/redis
            type: DirectoryOrCreate
        - name: dumps
          hostPath:
            path: /data/crypt/nextcloud/dumps
            type: DirectoryOrCreate
        - name: nextcloud-config
          hostPath:
            path: /data/crypt/nextcloud/nextcloud
            type: DirectoryOrCreate
        - name: php-overrides
          configMap:
            name: nextcloud-php-overrides
        - name: media
          hostPath:
            path: /data/crypt/media/media
            type: DirectoryOrCreate
